--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <p>I am currently hiring postdocs, PhD students, and research assistants. If you are interested in working with me, please fill out this <a href="https://forms.gle/cdSaZnptt5XG2Lo69" target="_blank">form</a>.</p>
 
   <footer>
-    © 2025 Chien-Yi Chang · Last updated April 2025
+    © 2025 Chien-Yi Chang
   </footer>
 </body>
 </html>
