--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Chien-Yi Chang | Academic Website</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -105,7 +104,7 @@
   <h2>Research</h2>
   <ul>
     <li><strong>The Liabilities of Robots.txt</strong><br>
-        Under review, 2025. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
+        Computer Law & Security Review: The International Journal of Technology Law and Practice, forthcoming. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
     <li><strong>Toward Equitable and Sustainable Data Handling in AI and Biomedical Research</strong><br>
         PhD Dissertation, Stanford University, 2025. </li>
 
