--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </blockquote> -->
   </div>
 
-  <p style="text-align: justify;">Chien-Yi Chang is an Assistant Professor of Computer Science and Assistant Professor of Law at Durham University. She is affiliated with the Center for Sustainable Development Law and Policy and the JusTN0W initiative. Her research sits at the intersection of artificial intelligence, technology law, and legal theory, with a focus on equitable and sustainable data practices.</p>
+  <p style="text-align: justify;">Chien-Yi Chang is an Assistant Professor of Computer Science and Assistant Professor of Law at Durham University. She is also affiliated with the Center for Sustainable Development Law and Policy and the JusTN0W initiative. Her research sits at the intersection of artificial intelligence, technology law, and legal theory, with a focus on equitable and sustainable data practices.</p>
 
 
 
@@ -104,7 +104,7 @@
   <h2>Research</h2>
   <ul>
     <li><strong>The Liabilities of Robots.txt</strong><br>
-        Computer Law & Security Review: The International Journal of Technology Law and Practice, forthcoming. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
+        Computer Law & Security Review, forthcoming. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
     <li><strong>Toward Equitable and Sustainable Data Handling in AI and Biomedical Research</strong><br>
         PhD Dissertation, Stanford University, 2025. </li>
 
