--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </blockquote> -->
   </div>
 
-  <p style="text-align: justify;">Chien-Yi Chang is an Assistant Professor of Computer Science and Assistant Professor of Law at Durham University. She is also affiliated with the Center for Sustainable Development Law and Policy and the JusTN0W initiative. Her research sits at the intersection of artificial intelligence, technology law, and legal theory, with a focus on equitable and sustainable data practices.</p>
+  <p style="text-align: justify;">Dr. Chien-Yi Chang is an Assistant Professor of Law and an Assistant Professor of Computer Science at Durham University. She is also affiliated with the Center for Sustainable Development Law and Policy and the JusTN0W initiative. Her research bridges law and technology, combining doctrinal analysis, empirical study, and computational experimentation to explore the legal, social, and technical dimensions of artificial intelligence. She holds a Ph.D. in Electrical Engineering from Stanford, a J.D. from CUHK, and a B.S. in Physics from Caltech.</p>
 
 
 
@@ -104,7 +104,7 @@
   <h2>Research</h2>
   <ul>
     <li><strong>The Liabilities of Robots.txt</strong><br>
-        Computer Law & Security Review, forthcoming. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
+        Computer Law & Security Review, 2025. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5159436" target="_blank">[SSRN]</a></li>
     <li><strong>Toward Equitable and Sustainable Data Handling in AI and Biomedical Research</strong><br>
         PhD Dissertation, Stanford University, 2025. </li>
 
